# baseball-game-notifiy-bot

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: notify.yml
baseball_game_results_notify/: main.py
